add some test for offerAPI